--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ img {
   padding: 4rem 0;
   background-color: var(--clr-light);
 }
-.service_wrapper {
+.banner .banner_wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
@@ -229,6 +229,7 @@ img {
   max-width: 120rem;
   margin-bottom: 4rem;
 }
+
 .banner_text h1 {
   color: var(--clr-primary);
   font-weight: 700;
@@ -255,7 +256,11 @@ img {
 }
 
 @media screen and (max-width: 520px) {
-  .banner_wrapper {
+  .banner {
+    padding: 15rem 0;
+  }
+  .banner .banner_wrapper {
+    display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
   }
@@ -509,6 +514,15 @@ img {
 }
 
 /* Services */
+.service_wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 5rem;
+  margin: 0 auto;
+  max-width: 120rem;
+  margin-bottom: 4rem;
+}
 
 .service_wrapper .services_banner_text h2 {
   color: var(--clr-primary);
@@ -545,7 +559,6 @@ img {
   text-align: left;
   /* margin: 0 auto; */
   direction: rtl;
-
   padding-bottom: 4rem;
 }
 .banner:nth-of-type(even) {
@@ -625,6 +638,293 @@ img {
   max-width: 120rem;
   margin: 0 auto;
 }
+
+/* UPDATES */
+.update {
+  padding: 4rem 0;
+}
+
+.update_wrapper {
+  display: grid;
+  grid-template-columns: 1.5fr 0.5fr;
+  /* align-items: center; */
+  gap: 5rem;
+  margin: 0 auto;
+  max-width: 120rem;
+  margin-bottom: 4rem;
+}
+
+.update_wrapper {
+  margin-top: 6rem;
+}
+
+.updates_social {
+  display: flex;
+  gap: 1.5rem;
+  margin-top: 2rem;
+  font-size: 25px;
+}
+.updates_social li a {
+  color: var(--clr-drak);
+}
+.updates_social li a:hover {
+  color: var(--clr-primary);
+}
+.updates_social p {
+  gap: 1.5rem;
+  font-size: 15px;
+}
+
+.top_design_concept {
+  border-bottom: 1px solid grey;
+  padding-bottom: 5rem;
+  width: 100%;
+}
+
+.update_left h5 {
+  gap: 1.5rem;
+  /* margin-top: 2rem; */
+  font-size: 24px;
+  font-weight: 500;
+  color: var(--clr-primary);
+}
+
+.update_left p {
+  margin: 1rem 0 3rem 0;
+}
+
+.updates_img img {
+  margin-top: 3rem;
+  width: 100%;
+}
+
+.update_right h5 {
+  gap: 1.5rem;
+  /* margin-top: 2rem; */
+  font-size: 24px;
+  font-weight: 500;
+  color: var(--clr-primary);
+}
+
+.update_right p {
+  margin: 1rem 0 3rem 0;
+}
+
+/* .update_right {
+  display: grid;
+  grid-template-columns: 1.5fr 0.5fr;
+  align-items: center;
+  gap: 5rem;
+  margin: 0 auto;
+  max-width: 120rem;
+  margin-bottom: 4rem;
+} */
+
+.update-no-bg-btn {
+  color: var(--clr-primary);
+  transition: all 0.5s ease-in-out;
+}
+.update-no-bg-btn:hover {
+  color: var(--clr-drak);
+  transition: all 0.5s ease-in-out;
+}
+.Categories {
+  /* display: grid; */
+  grid-template-columns: 0.25fr 0.25fr;
+  align-items: center;
+  gap: 5rem;
+  margin: 0 auto;
+  border-bottom: 1px solid grey;
+  width: 100%;
+  padding-bottom: 5rem;
+}
+
+.Categories h5 {
+  margin: 1rem 0 3rem;
+}
+.Categories table {
+  width: 100%;
+}
+.Categories tr {
+  display: flex;
+  justify-content: space-between;
+  gap: 5rem;
+  padding-bottom: 2rem;
+}
+
+.recent_post h5 {
+  padding-top: 5rem;
+}
+
+.recent_item {
+  display: flex;
+  gap: 1rem;
+}
+
+.recent_post table {
+  width: 100%;
+}
+
+.recent_post h5 {
+  padding-bottom: 2rem;
+}
+
+/* .recent_post tr {
+  /* display: flex; */
+/* justify-content: space-between; */
+/* gap: 5rem; */
+/* padding-bottom: 2rem;
+  font-weight: 700;
+} */
+
+.recent_post {
+  flex-direction: column;
+  /* font-weight: 600;
+  font-size: 13px; */
+  padding-bottom: 5rem;
+  border-bottom: 1px solid grey;
+}
+
+.recent__txt h6 {
+  font-weight: bolder;
+  font-size: 13px;
+}
+
+.recent_txt p {
+  padding-top: 2rem;
+}
+
+.recent__img img {
+  /* margin-top: 3rem; */
+  width: 20rem;
+  height: 9rem;
+}
+
+.tags h5 {
+  padding-bottom: 2rem;
+  padding-top: 5rem;
+}
+
+/* .Category tr > td {
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+} */
+
+@media screen and (max-width: 520px) {
+  .update {
+    padding-top: 15rem;
+  }
+}
+
+/* CONTACTS */
+
+.contact_section {
+  padding: 4rem 0;
+  background-color: var(--clr-drak);
+  border-bottom: 1px solid #ffffff;
+  height: 80vh;
+}
+
+.contact_wrapper {
+  /* display: grid; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 5rem 0 5rem;
+}
+
+.contact_details {
+  /* display: grid; */
+  display: grid;
+  grid-template-columns: 0.2fr 1fr;
+  padding: 0;
+  color: var(--clr-light);
+}
+
+.contact_details_icon a {
+  color: var(--clr-primary);
+}
+
+.contact_details_icon {
+  display: flex;
+  gap: 1.5rem;
+  margin-top: 2rem;
+  font-size: 25px;
+  color: var(--clr-primary);
+}
+
+.wrapper_contact_details {
+  margin-top: 5rem;
+}
+
+.contact_text h1 {
+  color: var(--clr-primary);
+  font-weight: 700;
+  font-size: 71px;
+  /* max-width: ; */
+  line-height: 7rem;
+  margin-bottom: 5rem;
+}
+
+.contact_text p {
+  margin-top: 2rem;
+  color: var(--clr-light);
+}
+
+.contact_details_icon {
+  display: flex;
+  gap: 1.5rem;
+  margin-top: 2rem;
+  font-size: 25px;
+}
+
+.contact_footer_social {
+  display: flex;
+  gap: 1.5rem;
+  margin-top: 5rem;
+  font-size: 25px;
+}
+
+.contact_footer_social li a {
+  color: var(--clr-light);
+}
+
+.contact_form form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 0 5rem;
+  gap: 2.5rem;
+}
+
+.contact_form input {
+  height: 48px;
+  padding: 0 16px;
+  font-size: 16px;
+}
+
+.contact_form input::placeholder {
+  font-family: var(--font);
+}
+
+.contact_form textarea::placeholder {
+  font-family: var(--font);
+  font-size: 16px;
+  padding: 16px;
+}
+
+.contact_form_btn {
+  text-align: right;
+}
+
+.contact_form_field button {
+  width: 80px;
+  height: 60px;
+}
+
+.right_column {
+  margin-top: 8rem;
+}
+
 /* ASSETS */
 .title h2 {
   font-size: 48px;
@@ -672,7 +972,7 @@ img {
 .cards_details h5 {
   font-size: 18px;
   color: var(--clr-primary);
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 .cards_details p {
   margin-bottom: 3rem;
@@ -716,6 +1016,17 @@ img {
   color: var(--clr-drak);
   transition: all 0.5s ease-in-out;
 }
+
+.btn.bg--light {
+  background-color: var(--clr-light);
+  color: var(--clr-drak);
+  border: 1px solid var(--clr-drak);
+  margin-bottom: 2rem;
+  /* display: flex; */
+  justify-content: space-between;
+  gap: 2rem;
+}
+
 .no-bg-btn {
   color: var(--clr-primary);
   transition: all 0.5s ease-in-out;
