--- a/style.css
+++ b/style.css
@@ -263,6 +263,7 @@ img {
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
+    padding-top: 17rem;
   }
   .banner_text h1 {
     font-size: 48px;
@@ -308,6 +309,11 @@ img {
 .about {
   padding: 4rem 0;
   background-color: var(--clr-light);
+}
+@media screen and (max-width: 520px) {
+  .about {
+    padding-top: 15rem;
+  }
 }
 .about_wrapper {
   display: grid;
@@ -594,6 +600,14 @@ img {
 }
 
 @media screen and (max-width: 520px) {
+  .servicebanner {
+    padding-top: 15rem;
+  }
+  .banner_wrapper {
+    padding-left: 1rem;
+  }
+}
+@media screen and (max-width: 520px) {
   .service_wrapper {
     flex-wrap: wrap;
     grid-template-columns: 1fr;
@@ -652,6 +666,17 @@ img {
   margin: 0 auto;
   max-width: 120rem;
   margin-bottom: 4rem;
+}
+
+@media screen and (max-width: 520px) {
+  .update_wrapper {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+  .update {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
 
 .update_wrapper {
@@ -825,11 +850,25 @@ img {
   height: 80vh;
 }
 
+@media screen and (max-width: 520px) {
+  .contact_section {
+    height: 120vh;
+  }
+}
+
 .contact_wrapper {
   /* display: grid; */
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 5rem 0 5rem;
+  gap: 2rem;
+}
+
+@media screen and (max-width: 520px) {
+  .contact_wrapper .contact_text {
+    justify-items: center;
+    padding: 0 1rem 0 1rem;
+  }
 }
 
 .contact_details {
@@ -892,7 +931,7 @@ img {
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0 0 0 5rem;
+  padding: 0 0 0 0rem;
   gap: 2.5rem;
 }
 
@@ -923,6 +962,24 @@ img {
 
 .right_column {
   margin-top: 8rem;
+}
+@media screen and (max-width: 520px) {
+  .contact_section {
+    padding-top: 17rem;
+  }
+  .contact_wrapper {
+    grid-template-columns: 1fr;
+    justify-items: center;
+    padding: 0 1rem 0 1rem;
+  }
+  .contact_form input {
+    width: 100%;
+    padding-left: 1rem;
+  }
+  .contact_form_field button {
+    width: 120px;
+    height: 80px;
+  }
 }
 
 /* ASSETS */
